<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Auther: Faisal Akhlaq -->

    <string name="app_name">ADT</string>
    <string name="hello_world">Hello world!</string>

    <!-- working_hours_tracker -->

    <string name="title_activity_working_hours_tracker">Working Hours Tracker</string>
    <string name="working_hours_chk_in_btn_lbl">Check-IN</string>
    <string name="working_hours_chk_in_btn_hint">check-in! start working on a job / task</string>
    <string name="working_hours_chk_out_btn_lbl">Check-OUT</string>
    <string name="working_hours_chk_out_btn_hint">check-out! stop working for a job / task</string>
    <string name="working_hours_create_task_btn_lbl">Create Job-Task</string>
    <string name="working_hours_create_task_btn_hint">create a new task / job on which I have started working</string>
    <string name="working_hours_edit_task_btn_lbl">Edit Job-Task</string>
    <string name="working_hours_edit_task_btn_hint">edit any task / job that you I created earlier</string>
    <string name="working_hours_show_hours_btn_lbl">Show Hours</string>
    <string name="working_hours_show_hours_btn_hint">display the hours worked</string>
    <string name="working_hours_edit_hours_btn_hint">edit my work hours</string>
    <string name="wht_addhour_btn_lbl">Add Hours</string>
    <string name="working_hours_view_calendar_btn_hint">display my calendar events</string>
    <string name="working_hours_calc_income_btn_lbl">Calculate Income</string>
    <string name="working_hours_calc_income_btn_hint">calculate income by setting the hourly rate for any task / job</string>
    <string name="working_hours_exit_btn_lbl">Exit</string>
    <string name="working_hours_exit_btn_hint">exit the working hours tracker</string>
    <string name="working_hours_my_hours_lbl">My Hours</string>

    <!-- Create New Task -->

    <string name="title_activity_create_task">Create New Job - Task</string>
    <string name="create_task_title_lbl">Title</string>
    <string name="create_task_title_lbl_hint">title of the work / task</string>
    <string name="create_task_org_name_lbl">Company</string>
    <string name="create_task_org_name_lbl_hint">name of the company</string>
    <string name="create_task_address_lbl">Address</string>
    <string name="create_task_address_lbl_hint">address of the company</string>
    <string name="create_task_hourly_wage_lbl">Hourly Wage</string>
    <string name="create_task_hourly_wage_lbl_hint">hourly wage for this task</string>
    <string name="create_task_desc_lbl">Description</string>
    <string name="create_task_desc_lbl_hint">Job or task description</string>
    <string name="create_task_create_btn">Create Job - Task</string>
    <string name="create_task_create_btn_hint">create the new task</string>

    <!-- Task List -->

    <string name="title_activity_task_list">Task List</string>

    <!-- Task -->

    <string name="title_activity_task">Task - Job</string>
    <string name="task_title_lbl">Title</string>
    <string name="task_title_lbl_hint">title of the work - task</string>
    <string name="task_org_name_lbl">Company</string>
    <string name="task_org_name_lbl_hint">name of the company</string>
    <string name="task_address_lbl">Address</string>
    <string name="task_address_lbl_hint">address of the company</string>
    <string name="task_hourly_wage_lbl">Hourly Wage</string>
    <string name="task_hourly_wage_lbl_hint">hourly wage for this task</string>
    <string name="task_desc_lbl">Description</string>
    <string name="task_desc_lbl_hint">Description-Responsibilities</string>
    <string name="task_create_btn">Create Job - Task</string>
    <string name="task_create_btn_hint">create the new task</string>
    <string name="task_edit_btn">Edit</string>
    <string name="task_edit_btn_hint">edit this task - job</string>
    <string name="task_delete_btn">Delete</string>
    <string name="task_delete_btn_hint">delete this task - job</string>
    <string name="task_created_on_lbl">Created on</string>

    <!-- Profile -->
    <string name="title_activity_user_profile">Profile</string>
    <string name="profile_fname_lbl">First Name</string>
    <string name="profile_lname_lbl">Last Name</string>
    <string name="profile_address_lbl">Address</string>
    <string name="profile_email_lbl">Email</string>
    <string name="profile_submit_btn_lbl">Submit</string>
    <string name="title_activity_hours">HoursActivity</string>

    <!-- Hours List -->
    <string name="hours_list_job_name_tv_lbl">Job-Task Title</string>
    <string name="hours_list_total_hours_tv_lbl">Total Hours Spent</string>

    <!-- Hours -->
    <string name="h_datewise_tv">Date wise</string>
    <string name="h_taskwise_tv">Task wise</string>
    <string name="h_date_taskwise_tv">Date and Task wise</string>
    <string name="h_from_date">From</string>
    <string name="h_to_date">To</string>
    <string name="date">Date</string>

    <!-- Hours Detail -->
    <string name="hours_detail_checkin_lbl">Check in</string>
    <string name="hours_detail_checkout_lbl">Check out</string>
    <string name="hours_detail_date_lbl">Date</string>
    <string name="hours_detail_duration_lbl">Duration</string>

    <!-- Display Hours Options -->
    <string name="dho_spinner_prompt">Select</string>
    <string name="dho_display_all">Display All</string>
    <string name="dho_show_btn_lbl">Show Hours</string>

    <!-- ADT -->
    <string name="adt_create_task_lbl">Create Task</string>
    <string name="adt_chk_in_lbl">Check in</string>
    <string name="adt_chk_out_lbl">Check out</string>
    <string name="adt_edit_task_lbl">Edit Task</string>
    <string name="adt_show_hours_lbl">Show Hours</string>
    <string name="adt_edit_hours_lbl">Edit Hours</string>
    <string name="adt_calc_income_lbl">Calculate Income</string>
    <string name="adt_view_calendar_lbl">Calendar</string>
    <string name="title_activity_add_hours">Add Hours</string>
    <string name="action_settings">Settings</string>

    <!-- ADD HOURS -->
    <string name="ah_header_tv">Add Hours</string>
    <string name="ah_fromdate_lbl">From Date</string>
    <string name="ah_fromtime_lbl">From Time</string>
    <string name="ah_fromdate_btn_lbl">From Date</string>
    <string name="ah_fromtime_btn_lbl">From Time</string>
    <string name="ah_todate_lbl">To Date</string>
    <string name="ah_totime_lbl">To Time</string>
    <string name="ah_todate_btn_lbl">To Date</string>
    <string name="ah_totime_btn_lbl">To Time</string>
    <string name="ah_btn_lbl">Add Hours</string>
    <string name="ah_jobspinner_prompt">Select Job</string>

    <!-- EDIT HOURS -->
    <string name="eh_title_tv">Title</string>
    <string name="eh_fromdate_lbl">From Date</string>
    <string name="eh_fromtime_lbl">From Time</string>
    <string name="eh_fromdate_btn_lbl">From Date</string>
    <string name="eh_fromtime_btn_lbl">From Time</string>
    <string name="eh_todate_lbl">To Date</string>
    <string name="eh_totime_lbl">To Time</string>
    <string name="eh_todate_btn_lbl">To Date</string>
    <string name="eh_totime_btn_lbl">To Time</string>
    <string name="eh_duration_lbl">Duration</string>
    <string name="eh_update_btn_lbl">Update Hours</string>
    <string name="title_activity_edit_hour">Edit Hours</string>

    <!-- SMS EMAIL MENU -->
    <string name="sms_btn_lbl">Send SMS</string>
    <string name="email_btn_lbl">Send EMAIL</string>

</resources>